# scaleway-servant-demo

./: README.md  scaleway-servant-demo.cabal
curl/: html-get.sh  json-get.sh  populate.sh
src/: API.hs  Main.hs  MemoryBackend.hs  Types.hs
src/Types/: HtmlInstances.hs
static/: style.css
