name:                scaleway-servant-demo
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              status failed
maintainer:          sf@statusfailed.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable scaleway-servant-demo
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base           >= 4.8   && < 4.9
                     , containers     >= 0.5   && < 0.6
                     , either         >= 4.4.1 && < 4.5
                     , text           >= 1.2   && < 1.3
                     , uri-bytestring >= 0.1.9 && < 0.1.10
                     , lens-family-core >= 1.2 && < 1.3
                     , servant        >= 0.4.4 && < 0.5
                     , servant-server >= 0.4.4 && < 0.5
                     , servant-lucid  >= 0.4.4 && < 0.5
                     , lucid          >= 2.9.2 && < 2.10
                     , aeson          >= 0.9   && < 0.11
                     , wai            >= 3.0   && < 3.1
                     , warp           >= 3.1   && < 3.2

  hs-source-dirs:      src
  default-language:    Haskell2010
